Update doc from video router
